Changed new playlist struct to be more appropriate
